2005-10-05  Alexis Sukrieh <sukria@backup-manager.org>

	* AUTHORS: fixed the name of "jimmy".
	* Makefile: man pages are generated and isntalled in the good section.
	* backup-manager.conf.tpl: Several typos.

0.5.9 Alexis Sukrieh <sukria@backup-manager.org>
	* Configuration keys have been drastically renamed.
	* Added a contrib script for upgrading the configuration files
	  to the new format: upgrade-conffile.sh
	* Upgraded the validation process, so deprecated variables trigger warnings
	  and are used as default values for the right name.
	* Better control of the tar commands, when an error occured, user is warned,
	  and a temp logfile is given.
	* Huge code cleanup for providing a modular implementation for several archive 
	  methods.
	* New archive method : mysql 
	  + uses mysqldump on a list of given databases.
	  + facility to choose a compression format for the resulting SQL file.
	* TODO backup method rsync
	* TODO backup method pipe

0.5.8b Alexis Sukrieh <sukria@backup-manager.org>
	* Configuration keys have been drastically renamed.
	* Security fixes 
	  + When burning a CDR, mktemp is used to prevent attacks on the file
	    system.
	  + It is possible to make the archive repository readable/writable by
	    a given user/group pair.
	* Features	
	  + The configuration file is now validated before running.
	    Warnings are triggered if configuration keys are not set.
	* Bug fixes
	  + If the filetype "tar.bz2" is chosen, /usr/bin/bzip2 is mandatory.
	  + The pre-command is run before the creation of the archive
	    repository.
	  + No trailing spaces are lost anymore when printing messages.
	* New configuration keys:
	  + BM_PURGE_DUPLICATES tells if duplicates should be replaced by
	    symlinks (default is yes).
	  + BM_REPOSITORY_SECURE tells if the archive repository and the
	    archive should be readable/writable by a given user:group (default
	    is yes).
	  + If BM_REPOSITORY_SECURE is activated, BM_USER and BM_GROUP should